--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>记事本</title>
-    <link rel="stylesheet" href=".\node_modules\bootstrap\dist\css\bootstrap.css">
-    <link rel="stylesheet" href=".\node_modules\bootstrap\dist\css\bootstrap-theme.css">
+    <link rel="stylesheet" href="bootstrap.css">
+    <link rel="stylesheet" href=..\..\..\..\node_modules\bootstrap\dist\css\bootstrap-theme.css">
     <link rel="stylesheet" href=".\css\main.css">
 </head>
 <body>
