--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     
     </div>
 
-    <script src=".\node_modules\jquery\dist\jquery.js"></script>
+    <script src="${pageContext.request.contextPath}\node_modules\jquery\dist\jquery.js"></script>
     <script src=".\node_modules\vue\dist\vue.js"></script>
     <script src=".\js\myStorage.js"></script>
     <script src=".\js\main.js"></script>
