--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>记事本</title>
     <link rel="stylesheet" href="bootstrap.css">
-    <link rel="stylesheet" href="..\..\node_modules\bootstrap\dist\css\bootstrap-theme.css">
+    <link rel="stylesheet" href="node_modules\bootstrap\dist\css\bootstrap-theme.css">
     <link rel="stylesheet" href=".\css\main.css">
 </head>
 <body>
@@ -69,7 +69,7 @@
     
     </div>
 
-    <script src="${pageContext.request.contextPath}\node_modules\jquery\dist\jquery.js"></script>
+    <script src=".\node_modules\jquery\dist\jquery.js"></script>
     <script src=".\node_modules\vue\dist\vue.js"></script>
     <script src=".\js\myStorage.js"></script>
     <script src=".\js\main.js"></script>
