--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>记事本</title>
     <link rel="stylesheet" href="bootstrap.css">
-    <link rel="stylesheet" href="..\zyouhan.github.io\node_modules\bootstrap\dist\css\bootstrap-theme.css">
+    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap-theme.css">
     <link rel="stylesheet" href=".\css\main.css">
 </head>
 <body>
