--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>记事本</title>
-    <link rel="stylesheet" href="bootstrap.css">
-    <link rel="stylesheet" href=..\..\..\..\node_modules\bootstrap\dist\css\bootstrap-theme.css">
+    <link rel="stylesheet" href=".css\bootstrap.css">
+    <link rel="stylesheet" href=".\css\bootstrap-theme.css">
     <link rel="stylesheet" href=".\css\main.css">
 </head>
 <body>
@@ -69,8 +69,8 @@
     
     </div>
 
-    <script src=".\node_modules\jquery\dist\jquery.js"></script>
-    <script src=".\node_modules\vue\dist\vue.js"></script>
+    <script src=".\js\jquery.js"></script>
+    <script src=".\js\vue.js"></script>
     <script src=".\js\myStorage.js"></script>
     <script src=".\js\main.js"></script>
 </body>
