--- a/note/index.html
+++ b/note/index.html
@@ -18,7 +18,7 @@
         </ul>
     </div>
 
-    <div id="main">
+    <div id="main" v-cloak>
         <div class="title">记录你的任务</div>
 
         <form @submit.prevent="add" id="editor" autocomplete="false">
