--- a/test-note-book/index.html
+++ b/test-note-book/index.html
@@ -23,12 +23,17 @@
 
         <form @submit.prevent="add" id="editor" autocomplete="false">
             <div class="submit">
-                <input id="task-input" placeholder="请输入任务名称" type="text" autocomplete="off" class="col-md-10"
+                <input id="task-input" placeholder="请输入任务名称" type="text" autocomplete="off" 
+                    class="col-md-10"
+                    @change="validateTitle"
                     v-model="task.content">
                     <button id="add-btn" class="btn btn-info" type="submit">新建</button>
                     <button @click="reset_task" id="cancel-btn" class="btn" type="button"
                         style="display:none;position:absolute;margin-left:5px;">
                         取消</button>
+            </div>
+            <div class="task-title-error" v-show="taskTitleError">
+                请输入任务！
             </div>
             <div class="detail">
                <textarea id="detail-area" placeholder="输入详情"  type="text" style="display:none"
@@ -36,30 +41,30 @@
             </div>
         </form>
 
-        <div class="task-list">
+        <div class="task-list" v-if="notFinishedLen > 0">
             <div class="wrap">
                 <div class="segment-title">待完成</div>
                 <div v-if="!todo.finished" v-for="(todo, index) in list" class="item">
-                    {{todo.content}}
+                    <span v-text="todo.content"></span>            
                     <button @click="finish(index)">完成</button>
                     <button @click="remove(index)">删除</button>
                     <button @click="toggle_detail(index)">详情</button>
                     <div v-if="todo.show_detail" class="detail">
-                        {{todo.detail || '无详情'}}
+                    <span v-text="todo.detail || '无详情'"></span>     
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="task-list">
+        <div class="task-list" v-if="finishedLen > 0">
             <div class="wrap">
                 <div class="segment-title">已完成</div>
                 <div v-if="todo.finished" v-for="(todo, index) in list" class="item">
                     <div class="finished"><img src="./img/finished.png" alt="完成"></div>
-                    {{todo.content}}
+                    <span v-text="todo.content"></span>            
                     <button @click="toggle_detail(index)">详情</button>
                     <div v-if="todo.show_detail" class="detail">
-                        {{todo.detail || '无详情'}}
+                    <span v-text="todo.detail || '无详情'"></span>     
                     </div>
                 </div>
             </div>
